--- a/app/src/main/res/layout/fragment_cad_produto.xml
+++ b/app/src/main/res/layout/fragment_cad_produto.xml
@@ -29,7 +29,8 @@
             <Spinner
                 android:id="@+id/spCategoria"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:entries="@array/categoriadoproduto"/>
 
             <TextView
                 android:id="@+id/textView2"
