--- a/app/src/main/res/layout/fragment_cad_produto.xml
+++ b/app/src/main/res/layout/fragment_cad_produto.xml
@@ -14,12 +14,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/cdCategoria"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Possui categoria cadastrada" />
-
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
@@ -72,7 +66,7 @@
                 android:inputType="number" />
 
             <Button
-                android:id="@+id/btSalvar"
+                android:id="@+id/btSalvarTela"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/titulo_salvar" />
