--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,13 +5,14 @@
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
-
+    <item
+        android:id="@+id/navigation_con_produto"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/title_con_produto" />
     <item
         android:id="@+id/navigation_cad_produto"
         android:icon="@android:drawable/ic_input_add"
         android:title="@string/title_cad_produto" />
-
-
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
