--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,9 +22,16 @@
         android:name="br.dev.kgb.mobile.estoquemp.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+
     <fragment
         android:id="@+id/navigation_cad_produto"
         android:name="br.dev.kgb.mobile.estoquemp.ui.produto.CadProdutoFragment"
         android:label="@string/title_cad_produto"
         tools:layout="@layout/fragment_cad_produto" />
+    <fragment
+        android:id="@+id/navigation_con_produto"
+        android:name="br.dev.kgb.mobile.estoquemp.ui.produto.ConProdutoFragmeny"
+        android:label="@string/title_con_produto"
+        tools:layout="@layout/fragment_con_produto_fragmeny_list" />
+
 </navigation>
